--- a/NLPHW1.ipynb
+++ b/NLPHW1.ipynb
@@ -6,7 +6,7 @@
       "name": "NLPHW1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNTqPSwikqY67eTszGE8blP",
+      "authorship_tag": "ABX9TyOArG+tDIZhurwsC4EPleFg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
         "\n",
         "verses = []\n",
         "for line in lines :\n",
-        "  if line != ' ' and line != '\\n' and hasNumbers(line) == False and :\n",
+        "  if line != ' ' and line != '\\n' and hasNumbers(line) == False  :\n",
         "    verses.append(line.replace('\\t',' '))\n",
         "\n",
         "for i in range(20) :\n",
@@ -65,9 +65,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Th7fYgmq-xCl",
-        "outputId": "181532e1-2c36-4039-d176-089d7bc337a6"
+        "outputId": "e15066ff-844c-4670-86d6-3f057b758d60"
       },
-      "execution_count": 17,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
