adding stop words txt file

--- a/NLPHW1.ipynb
+++ b/NLPHW1.ipynb
@@ -6,7 +6,7 @@
       "name": "NLPHW1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOArG+tDIZhurwsC4EPleFg",
+      "authorship_tag": "ABX9TyNMGhnX2fW/1ro4ywnYpOIo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,6 +47,11 @@
         "      return True\n",
         "  return False\n",
         "\n",
+        "def hasDash(inputString) :\n",
+        "  for character in inputString :\n",
+        "    if character == '-' :\n",
+        "      return True\n",
+        "  return False \n",
         "\n",
         "\n",
         "with open('/content/ShamsDaftar6.doc_filename=ShamsDaftar6.txt') as f:\n",
@@ -54,8 +59,9 @@
         "\n",
         "verses = []\n",
         "for line in lines :\n",
-        "  if line != ' ' and line != '\\n' and hasNumbers(line) == False  :\n",
-        "    verses.append(line.replace('\\t',' '))\n",
+        "  if line != ' ' and line != '\\n' and hasNumbers(line) == False  and hasDash(line)==False:\n",
+        "    if lines.index(line) != 0 :\n",
+        "      verses.append(line.replace('\\t',' '))\n",
         "\n",
         "for i in range(20) :\n",
         "  print(verses[i])"
@@ -65,18 +71,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Th7fYgmq-xCl",
-        "outputId": "e15066ff-844c-4670-86d6-3f057b758d60"
+        "outputId": "13c8f417-a573-4e02-f603-149075c0dee9"
       },
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "﻿دیوان شمس تبریزی (غزلیات)\n",
-            "\n",
-            "--------------------------------------------------------\n",
-            "\n",
             "گرم سیم و درم بودی مرا مونس چه کم بودی وگر یارم فقیرستی ز زر فارغ چه غم بودی\n",
             "\n",
             "خدایا حرمت مردان ز دنیا فارغش گردان از آن گر فارغستی او ز پیش من چه کم بودی\n",
@@ -112,6 +114,10 @@
             "عصای عشق از خارا کند چشمه روان ما را تو زین جوع البقر یارا مکن زین بیش بقاری\n",
             "\n",
             "فروریزد سخن در دل مرا هر یک کند لابه که اول من برون آیم خمش مانم ز بسیاری\n",
+            "\n",
+            "الا یا صاحب الدار رایت الحسن فی جاری فاوقد بیننا نارا یطفی نوره ناری\n",
+            "\n",
+            "چو من تازی همی گویم به گوشم پارسی گوید مگر بدخدمتی کردم که رو این سو نمی آری\n",
             "\n"
           ]
         }
