One Hot function is generated

--- a/NLPHW1.ipynb
+++ b/NLPHW1.ipynb
@@ -6,7 +6,7 @@
       "name": "NLPHW1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMOdu5o486n675gw0uIVLLr",
+      "authorship_tag": "ABX9TyPHzT41yC277LImMS415GiJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,12 +103,13 @@
         "from keras.preprocessing import text\n",
         "from keras.models import Sequential\n",
         "from keras.layers import Dense\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n"
       ],
       "metadata": {
         "id": "rSgsa9JiypuT"
       },
-      "execution_count": 2,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -383,6 +384,31 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Lets define our **One Hot Function**\n",
+        "\n",
+        "This function will convert numbers to one hot vectors"
+      ],
+      "metadata": {
+        "id": "99tKnLLNzBCE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def to_one_hot(data_point_index,vocab_size):\n",
+        "  temp = np.zeros(vocab_size)\n",
+        "  temp[data_point_index] = 1\n",
+        "  return temp"
+      ],
+      "metadata": {
+        "id": "8sm92ZTpzN7z"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
