Neighbours predicted with softmax function

--- a/NLPHW1.ipynb
+++ b/NLPHW1.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNfag3gHS7xH7nP27VoKmHm",
+      "authorship_tag": "ABX9TyOcARgPVD8PB6sO/L3zvibF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -474,6 +474,58 @@
       ],
       "metadata": {
         "id": "AeXS5czFH-xd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Convert training data into **Embedded representation**"
+      ],
+      "metadata": {
+        "id": "Kxf5pujEPWL2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "EMBEDDING_DIM = 5\n",
+        "W1 = tf.Variable(tf.random.normal([vocab_size,EMBEDDING_DIM]))\n",
+        "b1 = tf.Variable(tf.random.normal([EMBEDDING_DIM])) #bias\n",
+        "\n",
+        "hidden_representation = tf.add(tf.matmul(x,W1),b1)\n",
+        "\n",
+        "print(W1)\n",
+        "print(b1)\n",
+        "print(hidden_representation)"
+      ],
+      "metadata": {
+        "id": "XMOuVB-dPhDe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Making a prediction about neighbours with softmax"
+      ],
+      "metadata": {
+        "id": "O9RZFwvkQ9uv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "W2 = tf.Variable(tf.random.normal([EMBEDDING_DIM,vocab_size]))\n",
+        "b2 = tf.Variable(tf.random.normal([vocab_size]))\n",
+        "\n",
+        "prediction = tf.nn.softmax(tf.add(tf.matmul(hidden_representation,W2),b2))\n",
+        "print(prediction)"
+      ],
+      "metadata": {
+        "id": "u-lMr9OiRILv"
       },
       "execution_count": null,
       "outputs": []
