15 nearest words founded

--- a/NLPHW1.ipynb
+++ b/NLPHW1.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOcARgPVD8PB6sO/L3zvibF",
+      "authorship_tag": "ABX9TyOe/uIAURb7o89d2eNApcrJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,14 +71,7 @@
         "from keras.layers import Dense\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
-        "import tensorflow as tf\n",
-        "import re\n",
-        "import nltk\n",
-        "import sys\n",
-        "from collections import OrderedDict\n",
-        "from sklearn.manifold import TSNE\n",
-        "import matplotlib.pyplot as plt\n",
-        "%matplotlib inline"
+        "import tensorflow as tf"
       ],
       "metadata": {
         "id": "rSgsa9JiypuT"
@@ -334,10 +327,10 @@
         "        data.append([word,nb_word])\n",
         "# dataset = tf.data.T\n",
         "data = np.asarray(data)\n",
-        "tensor1 = tensorflow.data.Dataset.from_tensor_slices(data)\n",
-        "print(type(tensor1))\n",
-        "tensor1 = tensor1.cache().prefetch(buffer_size=AUTOTUNE)\n",
-        "print(tensor1)\n"
+        "# tensor1 = tf.data.Dataset.from_tensor_slices(data)\n",
+        "# print(type(tensor1))\n",
+        "# tensor1 = tensor1.cache().prefetch(buffer_size=AUTOTUNE)\n",
+        "# print(tensor1)\n"
       ],
       "metadata": {
         "id": "9Ha8J9GPxwId"
@@ -409,8 +402,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from tensorflow.python.keras import backend \n",
-        "\n",
         "x_train = []\n",
         "y_train = []\n",
         "\n",
@@ -422,9 +413,7 @@
         "\n",
         "#convert them to numpy arrays\n",
         "x_train = np.asarray(x_train)\n",
-        "y_train = np.asarray(y_train)\n",
-        "\n",
-        "print(x_train)"
+        "y_train = np.asarray(y_train)\n"
       ],
       "metadata": {
         "id": "iLKFcHnj04Sf"
@@ -526,6 +515,172 @@
       ],
       "metadata": {
         "id": "u-lMr9OiRILv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's go to train it"
+      ],
+      "metadata": {
+        "id": "QpnePSMLSnPX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# define session \n",
+        "session = tf.compat.v1.Session()\n",
+        "\n",
+        "init = tf.compat.v1.global_variables_initializer()\n",
+        "\n",
+        "session.run(init)\n",
+        "\n",
+        "# define the loss function\n",
+        "cross_entropy_loss = tf.reduce_mean(-tf.reduce_sum(y_label * tf.math.log(prediction),[1]))\n",
+        "\n",
+        "# define the training step\n",
+        "train_step = tf.compat.v1.train.GradientDescentOptimizer(0.1).minimize(cross_entropy_loss)\n",
+        "\n",
+        "n_iters = 10\n",
+        "\n",
+        "# train for n_iter iterations\n",
+        "\n",
+        "print(session.run(W1))\n",
+        "\n",
+        "# for _ in range(n_iters) :\n",
+        "  # session.run(train_step,feed_dict={x: x_train, y_label: y_train})\n",
+        "\n",
+        "  # print('loss is : ', session.run(cross_entropy_loss, feed_dict={x: x_train, y_label: y_train}))"
+      ],
+      "metadata": {
+        "id": "MM_xhIQuSrT2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Adding bias"
+      ],
+      "metadata": {
+        "id": "tZw7z3arlQ7L"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vectors = session.run(W1+b1)\n",
+        "# print(vectors)\n",
+        "\n",
+        "print(vectors[wordToIndex['آبنوس']])"
+      ],
+      "metadata": {
+        "id": "QB4PwXMOlufo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def euclidean_dist(vec1, vec2):\n",
+        "    return np.sqrt(np.sum((vec1-vec2)**2))\n",
+        "def find_closest(word_index, vectors):\n",
+        "    min_dist = 10000 # to act like positive infinity\n",
+        "    min_index = -1\n",
+        "    dictionary = {}\n",
+        "    query_vector = vectors[word_index]\n",
+        "    min_indexes = []\n",
+        "    for index, vector in enumerate(vectors):\n",
+        "        if euclidean_dist(vector, query_vector) < min_dist and not np.array_equal(vector, query_vector):\n",
+        "            min_dist = euclidean_dist(vector, query_vector)\n",
+        "            dictionary[index] = min_dist\n",
+        "    print(dictionary)\n",
+        "    sorted_by_value = dict(sorted(dictionary.items(),key= lambda item : item[1],reverse=True))\n",
+        "    for i in range(15) :\n",
+        "      min_indexes.append(sorted_by_value[i][0])\n",
+        "    print(min_indexes)\n",
+        "    return min_indexes"
+      ],
+      "metadata": {
+        "id": "MIOFBw4xtds2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word_index = wordToIndex['عشق']\n",
+        "min_dist = 10000 # to act like positive infinity\n",
+        "min_index = -1\n",
+        "dictionary = {}\n",
+        "query_vector = vectors[word_index]\n",
+        "min_indexes = []\n",
+        "for index, vector in enumerate(vectors):\n",
+        "    if euclidean_dist(vector, query_vector) and not np.array_equal(vector, query_vector):\n",
+        "        min_dist = euclidean_dist(vector, query_vector)\n",
+        "        dictionary[index] = min_dist\n",
+        "sorted_by_value = dict(sorted(dictionary.items(),key= lambda item : item[1]))\n",
+        "key_list = list(sorted_by_value.keys())\n",
+        "for i in range(15) :\n",
+        "  # print(sorted_by_value.get(sorted_by_value[i]))\n",
+        "  min_indexes.append(key_list[i])\n",
+        "\n",
+        "# closest = find_closest(wordToIndex['بابل'], vectors)\n",
+        "\n",
+        "for close in min_indexes :\n",
+        "  print(indxToWord[close])\n"
+      ],
+      "metadata": {
+        "id": "V_r-idqrmfFb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.manifold import TSNE\n",
+        "model = TSNE(n_components=2, random_state=0)\n",
+        "np.set_printoptions(suppress=True)\n",
+        "vectors = model.fit_transform(vectors)"
+      ],
+      "metadata": {
+        "id": "IQpaoaPJnN3L"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn import preprocessing\n",
+        "normalizer = preprocessing.Normalizer()\n",
+        "vectors =  normalizer.fit_transform(vectors, 'l2')"
+      ],
+      "metadata": {
+        "id": "Svd-yV6PnmuR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "fig, ax = plt.subplots()\n",
+        "for word in words[1:20]:\n",
+        "    print(word, vectors[wordToIndex[word]][1])\n",
+        "    ax.annotate(word, (vectors[wordToIndex[word]][0],vectors[wordToIndex[word]][1] ))\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "NQvVKd6CnqYd"
       },
       "execution_count": null,
       "outputs": []
