Codes documented with description for each part of the code

--- a/NLPHW1.ipynb
+++ b/NLPHW1.ipynb
@@ -665,7 +665,20 @@
         "id": "QpnePSMLSnPX"
       },
       "source": [
-        "Let's go to train it"
+        "Let's go to train it\n",
+        "\n",
+        "We do some functions here as follows\n",
+        "\n",
+        "\n",
+        "*   define session variable which it will define the operaions that we specified in our code\n",
+        "*   in a session because we want to hold values to our variables we need to call **Initializer** function first\n",
+        "\n",
+        "*   define the loss function \n",
+        "fot this propose I used tensorflow's reduce mean function which computes the mean of elements across dimenstions of a tensor\n",
+        "*   initial train step with using **GradientDescentOptimizer** which implements gradient descent algotithm \n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -717,6 +730,7 @@
         "# train for n_iter iterations\n",
         "\n",
         "print(session.run(W1))\n",
+        "# The reason that I have commented these below lines is that the colab will crash according to its RAM usage\n",
         "\n",
         "# for _ in range(n_iters) :\n",
         "  # session.run(train_step,feed_dict={x: x_train, y_label: y_train})\n",
@@ -733,8 +747,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Vectors will initial with session run method by adding biases to embedding graph"
+      ],
+      "metadata": {
+        "id": "lRo4Gi4oNt50"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 57,
       "metadata": {
         "id": "QB4PwXMOlufo"
       },
@@ -744,119 +767,94 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Here we have two important functions\n",
+        "\n",
+        "\n",
+        "*   **calculate_dist()**\n",
+        "\n",
+        "    on this function we calculate destination between two vectors\n",
+        "\n",
+        "*   **find_closest()**\n",
+        "\n",
+        "    on this function we will return the nearest word with its destination to main word\n"
+      ],
+      "metadata": {
+        "id": "i-1RgKIRN-X1"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 58,
       "metadata": {
         "id": "MIOFBw4xtds2"
       },
       "outputs": [],
       "source": [
-        "def euclidean_dist(vec1, vec2):\n",
+        "def calculate_dist(vec1, vec2):\n",
         "    return np.sqrt(np.sum((vec1-vec2)**2))\n",
         "def find_closest(word_index, vectors):\n",
-        "    min_dist = 10000 # to act like positive infinity\n",
-        "    min_index = -1\n",
         "    dictionary = {}\n",
         "    query_vector = vectors[word_index]\n",
         "    min_indexes = []\n",
         "    for index, vector in enumerate(vectors):\n",
-        "        if euclidean_dist(vector, query_vector) and not np.array_equal(vector, query_vector):\n",
-        "            min_dist = euclidean_dist(vector, query_vector)\n",
-        "            dictionary[index] = min_dist\n",
-        "    sorted_by_value = dict(sorted(dictionary.items(),key= lambda item : item[1]))\n",
-        "    key_list = list(sorted_by_value.keys())\n",
+        "        if calculate_dist(vector, query_vector) and not np.array_equal(vector, query_vector): # here we will use calculate_dist() and checking vectors not to be equal\n",
+        "            dist = calculate_dist(vector, query_vector) # set calculate dist function output to dist variable\n",
+        "            dictionary[index] = dist # adding dist to dictionary \n",
+        "\n",
+        "    sorted_by_value = dict(sorted(dictionary.items(),key= lambda item : item[1])) # we use sorted dictionary to select 20 nearest words with thier dist value\n",
+        "    key_list = list(sorted_by_value.keys()) \n",
         "    for i in range(20) :\n",
-        "      # print(sorted_by_value.get(sorted_by_value[i]))\n",
-        "      min_indexes.append(key_list[i])\n",
+        "      min_indexes.append([indexToWord[key_list[i]],sorted_by_value[key_list[i]]]) # indexToWord is used to get word with its index value | and also get dist between words from sorted dictionary\n",
         "    return min_indexes"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 23,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "V_r-idqrmfFb",
-        "outputId": "91771c27-9f1d-4b9f-ccf8-9b1ce117fd24"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "بجست\n",
-            "پار\n",
-            "سیر\n",
-            "شکن\n",
-            "حورا\n",
-            "ماوا\n",
-            "آثار\n",
-            "ولا\n",
-            "بلامک\n",
-            "قتل\n",
-            "فروغ\n",
-            "ببیند\n",
-            "پوز\n",
-            "امین\n",
-            "درده\n"
-          ]
-        }
-      ],
+      "cell_type": "markdown",
       "source": [
-        "closest = find_closest(wordToIndex['قانون'], vectors)\n",
+        "Now it's time to get 10 random numbers\n",
         "\n",
-        "for close in closest :\n",
-        "  print(indexToWord[close])\n"
-      ]
+        "We will find 20 nearest neighbours to each word\n",
+        "\n",
+        "By numpy library we get 10 random numbers \n",
+        "\n",
+        "for each random number we use **find_closest()** to find nearest words indexes\n",
+        "\n",
+        "after that we need to use **indexToWord** dictionary to find words"
+      ],
+      "metadata": {
+        "id": "ckhJhtlzIENC"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 56,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gz-RZ2Hw7D0I",
-        "outputId": "7f30a53a-5f38-40fe-b19b-d33b055862bb"
+        "outputId": "0f1c72b6-579b-445a-d32b-81753dfbf942"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Selected word is  یابد\n",
-            "['باشیدن', 'دبه', 'فضا', 'دواند', 'محفوظ', 'آسمان', 'گلو', 'راح', 'سرشنو', 'باغست', 'شکن', 'مادون', 'سرشته', 'شخص', 'شفاس', 'لات', 'شهد', 'انصاف', 'زاینده', 'بهترک']\n",
-            "Selected word is  کربلا\n",
-            "['لات', 'ارض', 'بدخو', 'خورشیدوار', 'حشا', 'موهب', 'مسخرند', 'زرگر', 'مرتضا', 'زخمه', 'دیوار', 'خیز', 'خطاب', 'سرنگون', 'بطوف', 'نقره', 'عقار', 'دده', 'کنس', 'هواخواه']\n",
-            "Selected word is  ونک\n",
-            "['بسپار', 'کعبه', 'پریدن', 'برگشاد', 'فال', 'پرخاک', 'المطار', 'رمز', 'مبارک', 'لامکان', 'شفق', 'حصن', 'پرباد', 'همنفسست', 'شوق', 'هوز', 'قرابه', 'صحراس', 'صور', 'مدرسه']\n",
-            "Selected word is  شکروش\n",
-            "['بیز', 'صهبا', 'چس', 'توانا', 'جنید', 'پرخواره', 'ذرار', 'درید', 'جلف', 'وارهد', 'خزان', 'نبرد', 'صانع', 'بررو', 'جور', 'ناب', 'بازان', 'احتراز', 'آگه', 'شهو']\n",
-            "Selected word is  مرتبه\n",
-            "['عهد', 'الرشاد', 'سنا', 'بگداختند', 'زلف', 'نرفتست', 'جهانست', 'ناشناس', 'ننگرد', 'نگو', 'محکم', 'گویاس', 'نرف', 'فرا', 'روشنتر', 'جراح', 'قایه', 'شادان', 'قتل', 'حیلات']\n",
-            "Selected word is  شکرخا\n",
-            "['افتقاد', 'استاد', 'برفشاند', 'تسبیح', 'مفت', 'هرچ', 'معاف', 'شمسا', 'راز', 'بوسیدن', 'دوچار', 'قطاریق', 'نعل', 'بکشته', 'محمود', 'برید', 'برافشاند', 'انفاس', 'باعرض', 'مقصود']\n",
-            "Selected word is  راض\n",
-            "['زنهار', 'جنون', 'هشمند', 'العزه', 'درگذشت', 'شرمنده', 'بداندیش', 'مشتغل', 'نماند', 'خاک', 'کآتش', 'خواره', 'فقیر', 'زیان', 'هنر', 'مشت', 'بافلاس', 'کوهسار', 'سرنا', 'بسترده']\n",
-            "Selected word is  دره\n",
-            "['الصلا', 'ببخشا', 'نارند', 'درمان', 'قندبار', 'بالله', 'نتاس', 'ببو', 'زیبا', 'بدید', 'هلالند', 'تلخ', 'صقال', 'فروریزد', 'سزد', 'پیرک', 'آهنگ', 'اراجیف', 'بپرسد', 'میق']\n",
-            "Selected word is  کلبتین\n",
-            "['سروقد', 'هماره', 'تحیر', 'متاب', 'بشنوید', 'هشمند', 'رسوا', 'برزد', 'پیوست', 'ننگ', 'وصال', 'فتوح', 'حسن', 'منال', 'سازید', 'مشت', 'گردیده', 'الملائک', 'افتقاد', 'باعرض']\n",
-            "Selected word is  دبدبه\n",
-            "['المطار', 'ایسار', 'پذرفتن', 'نروید', 'تمنا', 'جنبان', 'بلخ', 'فضا', 'لاله', 'عصاطلب', 'لات', 'اسپر', 'طرقید', 'مرید', 'آرامگاه', 'قیمت', 'تارک', 'مطلق', 'خماره', 'عجبا']\n"
+            "Selected word is  هرجا\n",
+            "[['تس', 2.4698346], ['عیارسیما', 2.5054643], ['قبله', 2.5985646], ['دلستان', 2.7809134], ['دد', 2.7930236], ['خلوتخانه', 2.8773103], ['پزید', 3.0040538], ['باشید', 3.0510404], ['مشفق', 3.0566597], ['افروخت', 3.0981977], ['صلاح', 3.1045623], ['نقره', 3.1179104], ['کفته', 3.1236634], ['آگه', 3.1352494], ['خجال', 3.1437476], ['ثا', 3.166957], ['بهانه', 3.173194], ['کوته', 3.1741972], ['درد', 3.175086], ['دلان', 3.186537]]\n"
           ]
         }
       ],
       "source": [
-        "rand_words_index = np.random.randint(vocab_size , size=(10))\n",
+        "rand_words_index = np.random.randint(vocab_size , size=(1))\n",
         "for index in rand_words_index :\n",
         "  close_words_index = find_closest(index, vectors)\n",
         "  print('Selected word is ',indexToWord[index])\n",
         "  close_words = []\n",
         "  for close in close_words_index :\n",
-        "    close_words.append(indexToWord[close])\n",
+        "    close_words.append(close)\n",
         "  print(close_words)"
       ]
     },
@@ -965,7 +963,7 @@
       "collapsed_sections": [],
       "name": "NLPHW1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPSBuPTg0HS9PhNkhF0Teij",
+      "authorship_tag": "ABX9TyMv45siM5GXDlgyydMa8yfA",
       "include_colab_link": true
     },
     "kernelspec": {
